day-12 task event-update-page

--- a/DAY12/eventupdate/event.html
+++ b/DAY12/eventupdate/event.html
@@ -25,7 +25,7 @@
               class="col-lg-3 col-md-6 col-sm-12 image-column d-flex align-items-center justify-content-center"
             >
               <div class="img d-flex align-items-center justify-content-center">
-                <img src="#" alt="Image" class="text" />
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Image" class="text" />
               </div>
             </div>
             <div class="col-lg-9 col-md-6 col-sm-12 form-column">
